--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,25 +7,42 @@ font-family: 'Roboto', sans-serif; */
   --secondary-font: "Raleway", sans-serif;
 
   /* Цвета */
+  --second-cl: #2196f3;
   --accent-txt: #2196f3;
   --primary-txt: #212121;
   --secondary-txt: #ffffff;
   --half-txt: #757575;
+  --secondary-half-txt: rgba(255, 255, 255, 0.6);
   /* цвета фона */
   --dark-fons: #2f303a;
   --light-fons: #f5f4fa;
+  --portfolio-fons: #e5e5e5;
 }
 
+body {
+  font-family: var(--main-font);
+  color: var(--primary-txt);
+  line-height: 1.4;
+  letter-spacing: 0.03em;
+}
+
+.list {
+  list-style: none;
+}
+.link {
+  text-decoration: none;
+}
 .header {
   background: var(--secondary-txt);
 }
+
 /* Стили логотипа */
 .header-link,
 .footer-link {
   font-family: var(--secondary-font);
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--accent-txt);
+  color: var(--second-cl);
 }
 .logo-primary {
   color: var(--primary-txt);
@@ -35,9 +52,12 @@ font-family: 'Roboto', sans-serif; */
 }
 /* Стили ссылок */
 .header-mail {
-  font-family: var(--main-font);
   line-height: 1.14;
   letter-spacing: 0.02em;
+  color: var(--half-txt);
+}
+.header-mail:hover,
+.header-mail:focus {
   color: var(--accent-txt);
 }
 .header-phone {
@@ -47,51 +67,47 @@ font-family: 'Roboto', sans-serif; */
   color: var(--half-txt);
 }
 .header-item {
-  font-family: var(--main-font);
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--primary-txt);
+  color: inherit;
 }
+.header-item:hover,
+.header-item:focus {
+  color: var(--accent-txt);
+}
+
 .hero {
   background: var(--dark-fons);
 }
 .hero-title {
-  font-family: var(--main-font);
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--secondary-txt);
 }
 .hero-btn {
-  background: var(--accent-txt);
+  background: var(--second-cl);
 }
 .hero-btn-color {
-  font-family: var(--main-font);
+  font-family: inherit;
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--secondary-txt);
+  cursor: pointer;
 }
-body {
-  font-family: var(--main-font);
-  color: var(--primary-txt);
-  line-height: 1.4;
-  letter-spacing: 0.03em;
-}
+
 .title {
-  font-family: var(--main-font);
   line-height: 1.17;
   color: var(--primary-txt);
 }
 
 .subtitle {
-  font-family: var(--main-font);
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--primary-txt);
 }
 
 .about-descr {
-  font-family: var(--main-font);
   line-height: 1.71;
   color: var(--half-txt);
 }
@@ -100,12 +116,10 @@ body {
   background: var(--light-fons);
 }
 .team-name {
-  font-family: var(--main-font);
   line-height: 1.19;
   color: var(--primary-txt);
 }
 .team-position {
-  font-family: var(--main-font);
   line-height: 1.19;
   color: var(--half-txt);
 }
@@ -113,23 +127,40 @@ body {
 .footer {
   background: var(--dark-fons);
 }
-
-.footer-item {
-  font-family: var(--main-font);
-  line-height: 1.71;
+.footer-gps {
+  font-style: normal;
   color: var(--secondary-txt);
+}
+.footer-mail,
+.footer-phone {
+  font-style: normal;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--half-txt);
 }
 
 /* Портфолио */
 
+.nav-link {
+  font-family: inherit;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 1.63;
+  background: var(--light-fons);
+  color: var(--primary-txt);
+  cursor: pointer;
+}
 .project-name {
-  font-family: var(--main-font);
   line-height: 2;
   color: var(--primary-txt);
 }
 
 .project-filter {
-  font-family: var(--main-font);
   line-height: 1.88;
   color: var(--half-txt);
+}
+.nav-link:hover,
+.nav-link:focus {
+  background-color: var(--accent-txt);
+  color: var(--secondary-txt);
 }
